# ntl-gnn-gapfilling

./: .gitignore  NTL-GNN_blog.docx  NTL_GNN_Optimization_Proposals.docx  README.md  SOLO_challenge_blog.docx  performance_report.docx  pyproject.toml  run_all.sh
adaptive_graph/: __init__.py
adaptive_graph/scheme_a_quality_adaptive_nodes/: README.md  config_a.py  graph_builder_a.py
adaptive_graph/scheme_b_dynamic_edge_construction/: README.md  __init__.py  dynamic_edge_builder.py  heterogeneity_analyzer.py
adaptive_graph/scheme_c_attention_graph_learning/: README.md  __init__.py  learnable_graph.py  model_c.py  train_scheme_c.py
adaptive_graph/scheme_c_v2/: __init__.py  train_scheme_c_v2.py
adaptive_graph/train_baseline/: __init__.py  build_and_train_ab.py  train_baseline.py
adaptive_graph/方案A_quality_adaptive_nodes/: README.md  __init__.py  adaptive_selector.py  config_a.py  graph_builder_a.py
adaptive_graph/方案B_dynamic_edge_construction/: README.md  __init__.py  config_b.py  graph_builder_b.py
adaptive_graph/方案C_attention_graph_learning/: README.md  __init__.py  config_c.py  graph_builder_c.py  learnable_graph.py  model_c.py  train_scheme_c.py
deploy/: 0_explore_env.sh  1_setup_env.sh  2_prepare_data.sh  3_run_benchmark.sh  4_run_v3_test.sh  4_test_adaptive.sh  5_train_scheme_c.sh  6_train_scheme_c_v2.sh  7_train_schemes_ab.sh  prepare_bj_data.py
ntl_graph_accel/: __init__.py  __main__.py  config.py  data_loader.py  gpu_bresenham.py  graph_builder.py  graph_cache.py  main.py  spatial_partitioner.py
ntl_graph_accel_v2/: __init__.py  __main__.py  bresenham_lut.py  config.py  data_loader.py  graph_builder.py  graph_cache.py  jit_kernels.py  main.py  spatial_partitioner.py
ntl_graph_accel_v3/: __init__.py  config.py  data_loader.py  graph_builder.py  main.py  template.py
